# elephas

./: .travis.yml  404.html  CONTRIBUTING.md  README.md  index.html  paper.md  pyproject.toml  requirements.txt  search.html  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: elephas-bug-report.md  elephas-documentation.md  elephas-feature-request.md
.github/workflows/: ci.yaml  docs.yaml
adapters/spark-ml/: index.html
adapters/spark-mllib/: index.html
docs/: autogen.py  mkdocs.yml
elephas/: ml_model.py  spark_model.py  worker.py
elephas/ml/: adapter.py
elephas/parameter/: client.py  server.py
elephas/utils/: functional_utils.py  rdd_utils.py
examples/: elephas_import.py  hf_causal_modeling.py  hf_text_classification.py  hf_token_classification.py  ml_mlp.py  ml_mlp_classification.py  ml_mlp_regression.py  ml_pipeline_otto.py  mllib_mlp.py  mnist_mlp_spark.py  mnist_mlp_spark_asynchronous.py  mnist_mlp_spark_synchronous.py
getting-started/faq/: index.html
getting-started/getting-started/: index.html
models/about-elephas-models/: index.html
models/spark-ml-model/: index.html
models/spark-mllib-model/: index.html
models/spark-model/: index.html
parameter/client/: index.html
parameter/server/: index.html
search/: search_index.json
tests/: conftest.py  test_ml_model.py  test_mllib_model.py  test_model_serialization.py
tests/data/: sample_data.csv
tests/integration/: conftest.py  test_custom_models.py  test_end_to_end.py  test_optimizer_check.py  test_training.py
tests/utils/: test_rdd_utils.py  test_serialization.py
utils/functional_utils/: index.html
utils/rdd_utils/: index.html
utils/serialization_utils/: index.html
why-use-elephas/: index.html
