[tool.poetry]
name = "elephas"
version = "5.2.1"
description = "Distributed deep learning on Spark with Keras"
readme = "README.md"
homepage = "https://danielenricocahall.github.io/elephas/"
authors = ["Daniel Cahall <danielenricocahall@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
tensorflow = ">2.2,<=2.17"
Flask = "^2.2.3"
h5py = "3.11.0"
pyspark = "<=3.5.1"
Cython = "^0.29.33"
numpy = "1.26.4"
transformers = { version = "<=4.42.4", optional = true }


[tool.poetry.dev-dependencies]
pytest = "^8.3.1"
pytest-pep8 = "^1.0.6"
pytest-cov = "^5.0.0"
pytest-spark = "^0.6.0"
mock = "^5.1.0"
scikit-learn = "^1.5.1"
transformers = "^4.42.4"

[tool.poetry.extras]
huggingface = ["transformers"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
