[tool.poetry]
name = "elephas"
version = "6.2.1"
description = "Distributed deep learning on Spark with Keras"
readme = "README.md"
homepage = "https://danielenricocahall.github.io/elephas/"
authors = ["Daniel Cahall <danielenricocahall@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<=3.12"
tensorflow = ">2.2,<2.20"
Flask = "^2.3.3"
h5py = "3.11.0"
pyspark = "<=4.0.0"
Cython = "^0.29.33"
numpy = "1.23.5"


[tool.poetry.dev-dependencies]
pytest = "^8.3.1"
pytest-pep8 = "^1.0.6"
pytest-cov = "^6.2.1"
pytest-spark = "^0.8.0"
mock = "^5.1.0"
scikit-learn = "^1.6.1"
datasets = "^2.20.0"

[tool.poetry.extras]
huggingface = ["transformers"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
